<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="230dp"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:layout_margin="5dp"
        android:paddingBottom="20dp"
        android:textColor="@color/Black"/>


    <EditText android:id="@+id/edit_goalPullUps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginBottom="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:onClick="StartExercise"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Red"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:textColor="#fff"
            android:background="@drawable/round_button"
            android:layout_marginEnd="5dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_go"
            android:onClick="StartExercise"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/GreenStartProgressBar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/go"
            android:textSize="25sp"
            android:textColor="#fff"
            android:background="@drawable/round_button"
            android:layout_marginStart="5dp"/>


    </LinearLayout>

</LinearLayout>