<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/ColorTheme"
        android:elevation="5dp"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout"
                android:textSize="20sp"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:layout_centerVertical="true"/>

            <ImageView
                android:src="@drawable/ic_connect"
                android:layout_width="35dp"
                android:layout_height="55dp"
                android:text="@string/connect"
                android:onClick="ConnectToBar"
                android:id="@+id/btn_Connect_Bar"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp" />

            <!--
            <Button
                android:text="Stop"
                android:id="@+id/btn_stop_BT"
                android:onClick="StopBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="100dp"/>
-->
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Chronometer
                    android:id="@+id/chronoTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="250dp"
                    android:textSize="30dp" />

             <!--   <pl.pawelkleczkowski.customgauge.CustomGauge
                    android:id="@+id/progress_pullups"
                    android:layout_margin="10dp"
                    android:layout_width="340dp"
                    android:layout_height="340dp"
                    android:padding="10dp"
                    app:gaugePointStartColor="@color/GreenStartProgressBar"
                    app:gaugePointEndColor="@color/GreenStartProgressBar"
                    app:gaugeEndValue="20"
                    app:gaugeStartAngle="120"
                    app:gaugeStartValue="0"
                    app:gaugeStrokeCap="ROUND"
                    app:gaugeStrokeWidth="20dp"
                    app:gaugeSweepAngle="300"
                    app:gaugeStrokeColor="@color/LightGrey"/>
                    -->
                <ProgressBar
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:max="100"
                    android:min="0"
                    android:progress="80"
                    android:progressDrawable="@drawable/main_halfcircularprogressbar_outside_bg"
                    android:rotation="125" />

                <ProgressBar
                    android:id="@+id/progress_pullups"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/main_halfcircularprogressbar_outside"
                    android:rotation="125"
                    android:background="@drawable/shadow_prog_bar"/>

                <android.support.v7.widget.AppCompatButton
                android:id="@+id/startExercise_Button"
                android:onClick="StartExercise"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/progress_pullups"
                android:backgroundTint="@color/GreenStartProgressBar"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/start"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="#fff"
                android:background="@drawable/round_button"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/stopExercise_Button"
                    android:onClick="StartExercise"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/progress_pullups"
                    android:backgroundTint="@color/Red"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/stop"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:textColor="#fff"
                    android:visibility="gone"
                    android:background="@drawable/round_button"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/TypeMesurament_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/type"
                android:textAlignment="center"
                android:textSize="15sp"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/weight_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/pullUpCounter_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/pull_ups"
                android:textAlignment="center"
                android:textSize="80sp" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="5dp">

            <RelativeLayout
                android:id="@+id/layout_progress2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:elevation="80dp">

                    <TextView
                        android:id="@+id/txt_PullupSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:text="@string/speed"/>

                    <TextView
                        android:id="@+id/txt_PullupAverageSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_below="@id/txt_PullupSpeed"
                        android:text="@string/avg_speed"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>