<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context="com.smartpullup.smartpullup.DialogEditProfileActivity">


    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_marginTop="35dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="20sp"
                    />
                <EditText
                    android:id="@+id/weight_edt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/ColorTheme"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/height_edt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textColor="@color/ColorTheme"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_marginTop="35dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="20sp"
                    />
                <EditText
                    android:id="@+id/edit_Date_of_Birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/ColorTheme"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/RedStopProgressBar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:textColor="#fff"
            android:background="@drawable/round_button"
            android:layout_marginEnd="5dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_Save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/com_facebook_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/save"
            android:textSize="25sp"
            android:textColor="#fff"
            android:background="@drawable/round_button"
            android:layout_marginStart="5dp"/>
    </LinearLayout>





</LinearLayout>

